--- a/app/index.html
+++ b/app/index.html
@@ -19,18 +19,11 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <h1>Product List</h1>
-        <select id="categorySelect">
-            <option value="all">All categories</option>
-        </select>
-        <div id="productList"></div>
-    </div>
     <main>
         <section>
             <label for="categorySelect">Select category</label>
             <select id="categorySelect">
-                <option value="">All</option>
+                <option value="">All categories</option>
             </select>
         </section>
     
