--- a/login/index.html
+++ b/login/index.html
@@ -22,7 +22,10 @@
             </div>
             <input type="submit" value="Ingresar" class="login__submit" />
         </form>
-                <a href="registro.html">Register</a>
+                <div class="flex-container">
+                    <a href="registro.html">Register</a>
+                </div>
+
     </main>
 
     <script src="./scripts.js"></script>
