--- a/login/index.html
+++ b/login/index.html
@@ -9,23 +9,22 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body class="body--full body--centered body--colored-green">
+<body class="body--full body--centered body--colored-red">
     <main class="login">
         <form id="login-form" class="login__form">
             <div class="input-container">
-                <label for="user" class="input-container__label">User</label>
-                <input type="text" name="user" id="user" class="input-container__input" />
+                <label for="user" class="input-container__label">Usuario</label>
+                <input type="text" name="user" id="user" class="input-container__input" required />
             </div>
             <div class="input-container">
-                <label for="pass" class="input-container__label">Password</label>
-                <input type="password" name="pass" id="pass" class="input-container__input" />
+                <label for="pass" class="input-container__label">Contraseña</label>
+                <input type="password" name="pass" id="pass" class="input-container__input" required />
             </div>
             <input type="submit" value="Ingresar" class="login__submit" />
         </form>
-                <div class="flex-container">
-                    <a href="registro.html">Register</a>
-                </div>
-
+        <div class="flex-container">
+            <a href="registro.html">Registrarse</a>
+        </div>
     </main>
 
     <script src="./scripts.js"></script>
