--- a/login/registro.html
+++ b/login/registro.html
@@ -8,5 +8,26 @@
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body></body>
+
+<body class="body--full body--centered body--colored-red">
+    <main class="login">
+        <form id="login-form" class="login__form">
+            <div class="input-container">
+                <label for="user" class="input-container__label">Usuario</label>
+                <input type="text" name="user" id="user" class="input-container__input" required />
+            </div>
+            <div class="input-container">
+                <label for="pass" class="input-container__label">Contraseña</label>
+                <input type="password" name="pass" id="pass" class="input-container__input" required />
+            </div>
+            <input type="submit" value="Ingresar" class="login__submit" />
+        </form>
+        <div class="flex-container">
+            <a href="index.html">Iniciar Sesion</a>
+        </div>
+    </main>
+
+    <script src="./scripts.js"></script>
+</body>
+
 </html>
